# splitsmith

./: .dockerignore  .gitignore  .railwayignore  CHANGELOG.md  CLAUDE.md  Dockerfile  FIRST_PROMPT.md  LAB.md  LICENSE  PRECISION_LIMITS.md  PRODUCTION_UI.md  README.md  SPEC.md  alembic.ini  docker-compose.agent.yml  docker-compose.ghcr.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  wrangler.toml
.github/: release-please-config.json
.github/workflows/: ci.yml  deploy-app.yml  deploy-marketing.yml  deploy-site.yml  publish-image.yml  publish-pypi.yml  release-please.yml  release.yml  worker-safety-net.yml
alembic/: env.py
alembic/versions/: 100a98d99b0e_add_version_to_workers.py  20aa31aeca11_add_timings_to_compute_jobs.py  4ab814cb20f5_create_share_tokens_table.py  5f824d1e237f_create_compute_jobs_table.py  97ef1128a4ba_create_recent_projects_table.py  a7c4e9d21b06_enable_rls_on_tenant_tables.py  b18398321003_create_users_table.py  b74c9ab3ed2f_create_matches_table.py  ba030223ab8b_create_users_table.py  ba72882f8c1c_apply_procrastinate_schema.py  c3f1a8e90d24_create_magic_link_tokens_and_sessions.py  d1f7b25c8a3e_create_state_docs_table.py  d2010e29f0c1_create_workers_table.py  e2a5f9c4b318_add_match_id_to_recent_projects.py  f1e3c3a6182e_add_users_scoreboard_identity_json_.py
docker/postgres-init/: 10-app-role.sql
docs/: COMMANDS.md  METHODOLOGY.md  cross-platform-audit.md  self-hosted-workers.md
docs/ensemble_dashboard/: latest_report.md
docs/local-slim/: 00-context-and-principles.md  01-current-footprint-and-targets.md  02-onnx-migration.md  03-model-hosting-and-delivery.md  04-packaging-and-install.md  05-dev-vs-prod-parity.md  06-slim-progress.md  README.md
docs/saas-readiness/: 00-context-and-principles.md  01-deployment-modes.md  02-tenancy-and-identity.md  03-storage-layer.md  04-compute-backends.md  05-uploads-and-streaming.md  06-api-surface.md  07-sync-and-migration.md  08-billing-and-quotas.md  09-saas-progress.md  10-singleton-elimination.md  11-environment-strategy.md  HOSTED-LOCAL.md  README.md
docs/ux-redesign/: 01-jobs-to-be-done.md  02-information-architecture.md  03-capability-inventory.md  04-onboarding-journey.md  05-accessibility.md  06-design-system.md  07-redesign-progress.md  08-known-pain-and-rough-edges.md  09-screenshot-tour.md
examples/: blacksmith-handgun-open-2026.json  compare-bromma-classifier-2026.yaml  tallmilan-2026.json
functions/api/: waitlist.js
packaging/: splitsmith-server.spec
scripts/: analyze_negatives.py  apply_r2_cors.py  build_beep_calibration.py  build_ensemble_artifacts.py  build_ensemble_fixture.py  build_overlay_theme.py  build_sweep_signals.py  capture_hero_og.py  capture_screenshots.py  check_proxy_backfill.py  compare_voter_d_backends.py  eval_beep_detector.py  eval_cwt_twopass.py  eval_detector.py  eval_ensemble.py  eval_refinement.py  eval_visual_voter.py  export_clap_onnx.py  export_pann_onnx.py  extract_audio_embeddings.py  extract_beats_embeddings.py  extract_clap_features.py  extract_full_fixture_audio.py  fetch_dtds.py  lofo_mining_experiment.py  migrate_fixtures_add_camera.py  migrate_fixtures_event_id.py  migrate_self_fixtures_to_token.py  mine_negatives.py  plot_sweep.py  preflight.sh  probe_visual_voter.py  promote_ensemble_audit.py  refresh_candidates.py  regression_voter_e.py  run_sweep.py  smoke_hosted.sh  smoke_runtime.py  smoke_slim_install.sh  staging-login.sh  (+8 more)
scripts/og/: hero.html  heroA.jsx  og.html  ogA.jsx  parts.jsx
scripts/sweep_grids/: apriori_boost.yaml  consensus_x_apriori.yaml  consensus_x_c_required.yaml  slack_x_override.yaml  voter_a_floor_offset.yaml  voter_b_threshold_offset.yaml  voter_c_confidence_override.yaml  voter_c_slack.yaml  voter_c_slack_fine.yaml  voter_d_threshold_offset.yaml  voter_e_threshold_offset.yaml
site/: README.md  index.html
skills/splitsmith-match/: README.md  SKILL.md
src/splitsmith/: __init__.py  agent.py  async_bridge.py  audit.py  auth.py  automation.py  backup.py  beep_calibration.py  beep_detect.py  beep_windows.py  cleanup.py  cli.py  coach.py  coach_distributions.py  composition.py  compute.py  config.py  cross_align.py  csv_gen.py  fcp7xml_render.py  fcpxml_gen.py  fixture_schema.py  lab_cli.py  match_cli.py  match_model.py  match_registry.py  model_cli.py  mp4_render.py  observability.py  overlay_render.py  overlay_theme.py  proxy.py  queue.py  relink.py  report.py  review_server.py  runtime.py  shot_detect.py  shot_refine.py  source_cache.py  (+12 more)
tests/: _dtd.py  conftest.py  hosted_helpers.py  test_admin_workers_routes.py  test_agc_state.py  test_agent.py  test_app_logging.py  test_audio_storage_cache.py  test_audit.py  test_audit_remerge_retry.py  test_auth.py  test_auth_routes.py  test_automation.py  test_backup.py  test_beep_calibration.py  test_beep_detect.py  test_beep_windows.py  test_cleanup.py  test_cli_clean.py  test_cli_paths.py  test_coach_api.py  test_coach_classify.py  test_coach_distributions.py  test_coach_schema.py  test_compare_cli.py  test_compare_emitter.py  test_compare_filler.py  test_compare_layout.py  test_compare_manifest.py  test_compare_merged_match.py  test_compare_project_loader.py  test_composition.py  test_compute.py  test_config.py  test_cross_align.py  test_csv_gen.py  test_db_foundation.py  test_dtd_validation.py  test_ensemble.py  test_export_storage_cache.py  (+98 more)
tests/fixtures/: beep-test.json  stage-shots-blacksmith-2026-stage1-apple-iphone17pro-promotion-report.json  stage-shots-blacksmith-2026-stage1-apple-iphone17pro.json  stage-shots-blacksmith-2026-stage1-s97dcec94-apple-iphone17pro-promotion-report.json  stage-shots-blacksmith-2026-stage1-s97dcec94-apple-iphone17pro.json  stage-shots-blacksmith-2026-stage1-s97dcec94-candidates.csv  stage-shots-blacksmith-2026-stage1-s97dcec94.json  stage-shots-blacksmith-2026-stage1.json  stage-shots-blacksmith-2026-stage2-apple-iphone17pro-promotion-report.json  stage-shots-blacksmith-2026-stage2-apple-iphone17pro.json  stage-shots-blacksmith-2026-stage2-candidates.csv  stage-shots-blacksmith-2026-stage2-s97dcec94.json  (+145 more)
(+319 files in other folders)
