[project]
name = "splitsmith"
version = "0.1.0"
description = "Extract IPSC shot splits from head-mounted camera footage"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mathias Axell"},
]
dependencies = [
    "librosa>=0.10.2",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "soundfile>=0.12.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.28.0",
    # Auto-loads <project>/.env / .env.local so SPLITSMITH_SSI_TOKEN works
    # without the user having to ``export`` it before launching the UI.
    "python-dotenv>=1.0.0",
    # Ensemble shot-detection runtime (issue #31). Heavy ML deps live in
    # the runtime path because the production audit UI needs voters
    # B (CLAP), C (GBDT), and D (PANN) to seed shots[] correctly.
    # Re-evaluate later if first-launch model download or wheel size
    # becomes a problem.
    "scikit-learn>=1.8.0",
    "joblib>=1.4.0",
    "torch>=2.11.0",
    "panns-inference>=0.1.1",
    "transformers>=5.7.0",
]

[project.scripts]
splitsmith = "splitsmith.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/splitsmith"]
# Frontend dev artefacts and node_modules don't belong in the published wheel.
# The built SPA at src/splitsmith/ui_static/dist/ IS shipped (FastAPI serves it
# from there); everything else under ui_static/ is build input.
exclude = [
  "**/ui_static/node_modules",
  "**/ui_static/src",
  "**/ui_static/package.json",
  "**/ui_static/pnpm-lock.yaml",
  "**/ui_static/vite.config.ts",
  "**/ui_static/tsconfig*.json",
  "**/ui_static/index.html",
  "**/ui_static/.gitignore",
  "**/ui_static/dist/**/*.map",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "respx>=0.21.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PTH"]

[tool.ruff.lint.per-file-ignores]
# Typer requires `typer.Option(...)` to be evaluated in the default; the B008
# warning is a false positive for Typer-based CLIs.
"src/splitsmith/cli.py" = ["B008"]
# Scoreboard models intentionally mirror the documented `/api/v1/` wire shape
# verbatim, which is mixed snake_case + camelCase. Translation to splitsmith's
# snake_case happens in adapters, not in the parsed-response models.
"src/splitsmith/ui/scoreboard/models.py" = ["N815"]
# Public scoreboard exceptions use the `*NotFound` / `*RateLimited` naming
# prescribed by the API contract in issue #49 rather than the N818 `*Error`
# convention. The names are part of the documented surface; renaming would
# break callers.
"src/splitsmith/ui/scoreboard/http.py" = ["N818"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests requiring external tools (ffmpeg, etc.)",
]

[tool.mypy]
python_version = "3.11"
strict = true
