[project]
name = "splitsmith"
version = "0.3.0"
description = "Extract IPSC shot splits from head-mounted camera footage"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mathias Axell"},
]
dependencies = [
    "librosa>=0.10.2",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.6.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "soundfile>=0.12.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.28.0",
    # Auto-loads <project>/.env / .env.local so SPLITSMITH_SSI_TOKEN works
    # without the user having to ``export`` it before launching the UI.
    "python-dotenv>=1.0.0",
    # Ensemble shot-detection runtime. Voter C (GBDT) lives via
    # scikit-learn + joblib. Voters B (CLAP) and D (PANN, folded into
    # C as a feature) use the slim ONNX runtime path (#377). Heavy
    # torch / transformers / panns-inference moved to [dev] -- they
    # power the export scripts + the optional Voter E visual probe,
    # not the shipped audit hot path.
    "scikit-learn>=1.8.0",
    "joblib>=1.4.0",
    "onnxruntime>=1.20.0",
    "huggingface_hub>=0.26.0",
    # PIL/Pillow was a transitive of torch + transformers before the
    # slim migration. The overlay renderer + Voter E frame loader
    # import it directly, so we pin it as a first-class runtime dep
    # now that the torch trio moved to [dev]. Caught by the clean-venv
    # smoke test 2026-05-23.
    "pillow>=10.0.0",
    # Model Context Protocol server (issue #211). Wraps the existing
    # HTTP / library APIs as tools any MCP-aware client can drive.
    # Stdio transport is the default; SSE comes for free.
    "mcp>=1.0.0",
]

[project.scripts]
splitsmith = "splitsmith.cli:app"
splitsmith-server = "splitsmith.ui.embedded:main"

[project.optional-dependencies]
# Hosted-mode runtime deps. ``splitsmith ui`` (local mode) doesn't import
# any of these -- the SQLAlchemy stores, alembic migration runner, and
# S3Storage backend are all lazy-imported behind ``SPLITSMITH_MODE=hosted``.
# Install with ``pip install splitsmith[hosted]`` for the wheel, or
# ``uv sync --extra hosted`` (which the production Dockerfile does).
hosted = [
    # SaaS-foundation DB layer (doc 02). SQLAlchemy 2.x async +
    # Alembic for migrations. ``aiosqlite`` covers the SQLite-backed
    # smoke tests + local hosted-mode runs; ``asyncpg`` is the
    # production dialect.
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "python-ulid>=3.0.0",
    # ``S3Storage`` backend (doc 03). Wheel-installs ``boto3`` so the
    # hosted runtime can upload to R2 / S3 / MinIO. The local-mode
    # wheel still skips this because ``boto3`` only imports inside
    # ``S3Storage.__init__`` (and ``__init__`` only runs in hosted
    # mode -- see ``_apply_hosted_mode_wiring``).
    "boto3>=1.35.0",
    # Postgres-native job queue for the worker fleet (doc 04). Pulled
    # in only via the hosted extra so local-mode wheels stay queue-
    # free. ``splitsmith.queue`` is lazy-imported behind
    # ``_hosted_mode_active()``; local entrypoints never reach it.
    # ``psycopg[binary]`` ships the libpq C bindings procrastinate's
    # PsycopgConnector needs; procrastinate itself only requires the
    # pure ``psycopg[pool]`` and leaves the backend choice to us.
    "procrastinate>=2.0.0",
    "psycopg[binary]>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/splitsmith"]
# Frontend dev artefacts and node_modules don't belong in the published wheel.
# The built SPA at src/splitsmith/ui_static/dist/ IS shipped (FastAPI serves it
# from there); everything else under ui_static/ is build input.
exclude = [
  "**/ui_static/node_modules",
  "**/ui_static/src",
  "**/ui_static/package.json",
  "**/ui_static/pnpm-lock.yaml",
  "**/ui_static/vite.config.ts",
  "**/ui_static/tsconfig*.json",
  "**/ui_static/index.html",
  "**/ui_static/.gitignore",
  "**/ui_static/dist/**/*.map",
]

[tool.hatch.build.targets.sdist]
# Test fixtures are ~140 MB of audio (above PyPI's default 100 MB per-file
# limit) and never needed by anyone installing from sdist. Build / dev
# outputs, design docs, maintainer scripts, and the SPA source tree are
# also excluded -- they live in git for contributors; nobody source-builds
# the wheel needs them.
include = [
  "src/splitsmith/**",
  "README.md",
  "LICENSE*",
  "CHANGELOG.md",
  "pyproject.toml",
  "uv.lock",
]
exclude = [
  "**/__pycache__",
  "**/*.pyc",
  "**/ui_static/node_modules",
  "**/ui_static/dist/**/*.map",
]

[dependency-groups]
dev = [
    # Self-extra: pulls in the hosted-mode runtime deps so the dev env
    # can exercise the hosted code paths (alembic, sqlalchemy, asyncpg,
    # aiosqlite, python-ulid, boto3). Declared once in
    # ``[project.optional-dependencies].hosted``; contributors don't
    # have to re-list them here.
    "splitsmith[hosted]",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "respx>=0.21.1",
    # In-memory S3 mock for ``test_s3_storage.py`` +
    # ``test_hosted_raw_upload.py``. Dev-only; production never
    # imports moto.
    "moto[s3]>=5.0.0",
    # Headless-browser driver for UI walkthroughs / screenshots of the
    # hosted SPA (e.g. the magic-link login flow). Dev-only; needs a
    # one-time ``uv run playwright install chromium`` to fetch the browser
    # binary (not vendored in the repo or the wheel).
    "playwright>=1.60.0",
    # Ensemble sweep analysis (issue #281 follow-up). pyarrow for the
    # signals/runs parquet store, matplotlib for the PNG plot layer.
    # Dev-only: the production API does not read these files.
    "pyarrow>=17.0.0",
    "matplotlib>=3.9.0",
    # ONNX export tooling (docs/local-slim/02). Needed when running
    # scripts/export_*_onnx.py and tests/test_onnx_parity.py. The
    # slim runtime imports ``onnxruntime`` (in [project] deps); this
    # group pulls in the export-side tools.
    "onnx>=1.16.0",
    "onnxscript>=0.1.0",
    # Heavy ML libs for: (a) the optional Voter E visual probe (off
    # by default, requires SPLITSMITH_ENABLE_VOTER_E=1), (b) running
    # build_ensemble_artifacts.py + export_*_onnx.py against the
    # upstream torch checkpoints, (c) parity tests against the torch
    # reference. End users on the slim wheel never see these.
    "torch>=2.11.0",
    "transformers>=5.7.0",
    "panns-inference>=0.1.1",
]

[tool.ruff]
# 110, not 100, to give black's conservative wrapping room. Black's
# line-length policy is "soft" -- it won't split a call that has a long
# string literal arg even if the line ends up at 100-110 chars. Aligning
# ruff's E501 to 110 stops it from firing on lines black already accepts.
# When a line crosses 110, the magic-trailing-comma convention is the
# canonical fix: add a trailing comma to the argument list and black
# auto-wraps one-arg-per-line.
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PTH"]

[tool.ruff.lint.per-file-ignores]
# Typer requires `typer.Option(...)` to be evaluated in the default; the B008
# warning is a false positive for Typer-based CLIs.
"src/splitsmith/cli.py" = ["B008"]
"src/splitsmith/lab_cli.py" = ["B008"]
"src/splitsmith/compare/cli.py" = ["B008"]
"src/splitsmith/match_cli.py" = ["B008"]
# FastAPI mirrors the Typer pattern: ``File(...)``, ``Form(...)``,
# ``Query(...)`` are required as parameter defaults so the framework can
# introspect them.
"src/splitsmith/ui/server.py" = ["B008"]
# Scoreboard models intentionally mirror the documented `/api/v1/` wire shape
# verbatim, which is mixed snake_case + camelCase. Translation to splitsmith's
# snake_case happens in adapters, not in the parsed-response models.
"src/splitsmith/ui/scoreboard/models.py" = ["N815"]
# Public scoreboard exceptions use the `*NotFound` / `*RateLimited` naming
# prescribed by the API contract in issue #49 rather than the N818 `*Error`
# convention. The names are part of the documented surface; renaming would
# break callers.
"src/splitsmith/ui/scoreboard/http.py" = ["N818"]
# Slim model layer exceptions (NetworkUnreachable, HashMismatch) are
# named per docs/local-slim/03-model-hosting-and-delivery.md; the doc
# is the public contract, not the N818 `*Error` convention.
"src/splitsmith/models/errors.py" = ["N818"]
# Training + evaluation scripts use ML naming conventions (X / Y / Xtr / Xte
# for feature/label matrices) by long-standing scikit-learn convention. The
# scripts directory is also where the team iterates on research code, so
# accept a slightly looser rule set than ``src/`` carries.
"scripts/*" = ["N803", "N806"]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# ``addopts`` excludes ``docker`` by default -- the docker-compose
# smoke pulls images + builds a container, which is a 30-60s setup
# we don't want CI / dev runs to pay for. Opt in with
# ``pytest -m docker`` when validating hosted-mode locally.
addopts = "-m 'not docker'"
markers = [
    "integration: integration tests requiring external tools (ffmpeg, etc.)",
    "docker: hosted-mode smoke tests that require docker compose. Skipped by default; run with `pytest -m docker`.",
]

[tool.mypy]
python_version = "3.11"
strict = true
